# bifo-graph

./: .gitignore  BENCHMARK_MANIFEST.md  Makefile  README.md  REPRODUCE.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: analysis_provenance_template.yaml  bifo_ddkg_mapping.yaml  bifo_mapping.yaml  pipeline_config.yaml
cypher/: c4_mapk_export_queries.cypher  c4_notch_export_queries.cypher  chd_curated_export_queries.cypher  kf_chd_export_queries.cypher  kf_chd_query2.cypher  kf_chd_query3.cypher  kf_chd_query4.cypher  kf_chd_query5.cypher  kf_chd_query6.cypher  kf_nbl_export_queries.cypher  kf_nbl_query2.cypher  kf_nbl_query3.cypher  kf_nbl_query4.cypher  kf_nbl_query5.cypher  kf_nbl_query6.cypher
docs/: METHODS_AUDIT.md  configuring_pathway_sources.md
figures/: fig1_conditioning.R  fig2_gene_recovery.R  fig3_ablation.R  fig4_baseline_heatmap.R  fig5_c4_controls.R  fig6_resampling.R  fig8_crosscohort.R  fig9_rank_vs_nullz.R
pipeline/: baseline_enrichment.py  bifo_conditioning.py  build_cilia_reference.py  build_ncc_membership_edges.py  chd_resampling_exhaustive.py  check_configs.py  clean_cypher_output.py  compute_disease_relevant_intersections.py  generate_export_cypher.py  kf_resampling.py  pipeline_config.py  run_sm5_calibration_sweep.py  score_pathways.py  seed_cui_lookup.py  summarize_results.py
scripts/: build_cilia_ref.sh  build_ncc_edges.sh  clean_files.sh  merge_files.sh  run_baseline.sh  run_conditioning.sh  run_full_pipeline.sh  run_kf_chd_export.sh  run_kf_nbl_export.sh  run_resampling.sh  run_scoring.sh  run_seed_lookup.sh  (+2 more)
(+163 files in other folders)
